Alignment fix

--- a/client/src/assets/stylus/views/add-song.styl
+++ b/client/src/assets/stylus/views/add-song.styl
@@ -73,6 +73,7 @@
       width: calc(100% - 70px)
       height: 45px
       cursor: pointer
+      margin-top: -3px
 
       &:active
         background-color: rgba(255, 255, 255, 0.2)
